--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 weasyprint = "*"
 jinja2 = "*"
-pyyaml = ">=4.2b1"
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
